Changed around filenames a bit

--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@ fleqn
 
 % \input{title}
 
-\begin{onehalfspace}
+\begin{doublespace}
 %%%%%%%%%%%%%%%%%
 \chapter*{Abstract}
 \section*{}
@@ -42,20 +42,21 @@ fleqn
 %%%%%%%%%%%%%%%%
 \part{DBI inflation}
 \label{part:dbi}
-% \input{dbi/dbi}
 % 
-% \input{dbi/multibrane}
+\input{dbi/dbi}
+% 
+\input{dbi/multibrane}
 %%%%%%%%%%%%%%%%
 \part{Numerical simulations of perturbations}
 \label{part:numerical}
-% \input{numerical/numerical}
+\input{numerical/numerical}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\part*{}%Stuff at the end}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Concluding summary}
 
 % \input{theend}
-\end{onehalfspace}
+\end{doublespace}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliography{references}
 % \bibliographystyle{dmmm}
