--- a/thesis.tex
+++ b/thesis.tex
@@ -1,19 +1,15 @@
 \documentclass[
 %twoside,
 12pt,
-fleqn
 %,openright
 ]
-{dmthesis}
-%%%%%%%%%%%%%%%%%%
-%\renewenvironment{onehalfspace}{}{} 
-\renewcommand{\tstamp}{}
-%%%%%%%%%%%%%%%%%%
-%\setlength{\oddsidemargin}{0cm}
-%\setlength{\evensidemargin}{0cm}
+{icldt}
+
+
 \begin{document}
 
-% \input{title}
+% Title page
+\input{title}
 
 \begin{doublespace}
 %%%%%%%%%%%%%%%%%
