--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.2 2009/07/12 16:22:53 ith Exp $
+%  $Id: ihformat.sty,v 1.3 2009/07/12 16:47:28 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -17,27 +17,50 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \newcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.2 2009/07/12 16:22:53 ith Exp $}
+% \newcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.3 2009/07/12 16:47:28 ith Exp $}
 
-\ExecuteOptions{}
+\ExecuteOptions{CVSoff}
 \ProcessOptions
 % % % % % % % % % % % % % % % 
 % Packages
 % % % % % % % % % % % % % % %
-% \RequirePackage{graphicx}
-% \RequirePackage{color}
+\RequirePackage{graphicx}
+\RequirePackage{color}
 % % 
 % \RequirePackage{times}
-% \RequirePackage{setspace}
-% \RequirePackage{verbatim}
-% % \usepackage[square]{natbib}
-% % \usepackage{rotating}
-% % \usepackage{psfrag}
+\RequirePackage{setspace}
+\RequirePackage{verbatim}
+% \usepackage[square]{natbib}
+% \usepackage{rotating}
+% \usepackage{psfrag}
 % % 
-% \pagestyle{headings}
-% \RequirePackage{fancyhdr}
+\pagestyle{headings}
+\RequirePackage{fancyhdr}
 % % 
-% \RequirePackage{amsmath}
-% \RequirePackage{amssymb
+\RequirePackage{amsmath}
+\RequirePackage{amssymb}
 % \RequirePackage{mathrsfs}
-% \RequirePackage{makeidx}
+\RequirePackage{makeidx}
+
+% My macros package
+\RequirePackage{ihmacros}
+
+% % % % % % % % % % 
+% fancyhdr settings
+% % % % % % % % % % 
+%%%% pagestyle should be indicated after the margins according to the 
+%%%% fancyheading instructions that come with the package
+\pagestyle{fancyplain}
+\newcommand{\CVSrevision}{}
+\renewcommand{\chaptermark}[1]{\def\chapternamenow{#1}
+               \markright{\thechapter :\ #1} }
+\renewcommand{\sectionmark}[1]{\markright{\thesection :\  
+%\chapternamenow \ ---\
+ #1}}
+\lhead[\fancyplain{}{\thepage}]         {\fancyplain{}{\rightmark}}
+\chead[\fancyplain{}{}]                 {\fancyplain{}{}}
+\rhead[\fancyplain{}{\leftmark}]       {\fancyplain{}{\thepage}}
+\lfoot[\fancyplain{}{}]                 {\fancyplain{}{}}
+\cfoot[\fancyplain{\thepage}{}]         {\fancyplain{\thepage}{}}
+\rfoot[\fancyplain{} {}]  {\fancyplain{}{\CVSrevision}}
+
