Added CVSrevision command to put version in footer.

--- a/title.tex
+++ b/title.tex
@@ -1,3 +1,10 @@
+% % % % % % % % % % % % % % % % % % % % % % % 
+% title.tex - Ian Huston
+% $Id: title.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% % % % % % % % % % % % % % % % % % % % % % % 
+% Redefine CVSRevision for this section
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+% 
 \college{Queen Mary}
 % 
 % 
@@ -9,6 +16,9 @@
 % 
 % 
 \title{Distinguishing inflationary models using higher order statistics}
+% 
+% 
+\author{Ian Huston}
 % 
 % 
 \maketitle
