--- a/thesis.tex
+++ b/thesis.tex
@@ -1,3 +1,7 @@
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% Thesis - Ian Huston
+% $Id: thesis.tex,v 1.5 2009/07/12 17:47:59 ith Exp $
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
@@ -6,7 +10,11 @@
 {icldt}
 
 % My formatting package
-\usepackage{ihformat}
+% CVSon for cvs revision number in footers
+% CVSoff is default
+\usepackage[CVSon]{ihformat}
+% Redefine CVSRevision for this section
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.5 2009/07/12 17:47:59 ith Exp $}
 
 \begin{document}
 
