--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.3 2009/07/12 16:47:28 ith Exp $
+%  $Id: ihformat.sty,v 1.4 2009/07/12 17:48:57 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -17,7 +17,7 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \newcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.3 2009/07/12 16:47:28 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.4 2009/07/12 17:48:57 ith Exp $}
 
 \ExecuteOptions{CVSoff}
 \ProcessOptions
