Added CVS revision number for footer.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,1 +1,7 @@
-\input{paper1}
+% % % % % % % % % % % % % % % % % % % % % 
+% dbi.tex - Ian Huston
+% $Id: dbi.tex,v 1.3 2009/07/12 18:24:14 ith Exp $
+% % % % % % % % % % % % % % % % % % % % % 
+% Redefine CVSRevision for this section
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.3 2009/07/12 18:24:14 ith Exp $}
+% \input{paper1}
