--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,1 +1,7 @@
-\input{numerical/paper3}
+% % % % % % % % % % % % % % % % % % % % % 
+% numerical.tex - Ian Huston
+% $Id: numerical.tex,v 1.3 2009/07/12 18:24:14 ith Exp $
+% % % % % % % % % % % % % % % % % % % % % 
+% Redefine CVSRevision for this section
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.3 2009/07/12 18:24:14 ith Exp $}
+% \input{numerical/paper3}
