Put chapter heads into files.

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,6 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% $Id: acknowledgements.tex,v 1.3 2009/07/12 19:28:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.3 2009/07/12 19:28:06 ith Exp $}
+% 
+% 
+\chapter*{Acknowledgements}
+%\addcontentsline{toc}{chapter}{Acknowledgements}
