--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,11 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% $Id: abstract.tex,v 1.3 2009/07/12 19:28:06 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.3 2009/07/12 19:28:06 ith Exp $}
+% 
+% 
+\chapter*{Abstract}
+\section*{}
+INSERT ABSTRACT HERE
