--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,11 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.5 2009/07/12 17:47:59 ith Exp $
+% $Id: thesis.tex,v 1.6 2009/07/12 19:28:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
+doublespacing
 %,openright
 ]
 {icldt}
@@ -14,8 +15,14 @@
 % CVSoff is default
 \usepackage[CVSon]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.5 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.6 2009/07/12 19:28:29 ith Exp $}
 
+\includeonly{
+% abstract,
+dbi/dbi,
+% dbi/multi,
+% numerical/numerical
+}
 \begin{document}
 
 % Title page
@@ -23,17 +30,20 @@
 
 \begin{doublespace}
 %%%%%%%%%%%%%%%%%
-\chapter*{Abstract}
-\section*{}
-% \input{abstract}
+% % % % % % % % % % % % % % % % % 
+% Abstract
+\include{abstract}
+% % % % % % % % % % % % % % % % % 
 
-\chapter*{Declaration}
-% \input{declaration}
+% % % % % % % % % % % % % % % % % 
+% Acknowledgements
+\include{acknowledgements}
+% % % % % % % % % % % % % % % % % 
 
-\chapter*{Acknowledgements}
-%\addcontentsline{toc}{chapter}{Acknowledgements}
-% \input{acknowledgements}
 
+% % % % % % % % % % % % % % % % % 
+% Table of contents and figures
+% % % % % % % % % % % % % % % % % 
 %\end{onehalfspace}
 %\setcounter{tocdepth}{0}
 \tableofcontents
@@ -49,9 +59,9 @@
 \part{DBI inflation}
 \label{part:dbi}
 % 
-\input{dbi/dbi}
+\include{dbi/dbi}
 % 
-\input{dbi/multibrane}
+\include{dbi/multibrane}
 %%%%%%%%%%%%%%%%
 \part{Numerical simulations of perturbations}
 \label{part:numerical}
