Added standard header with CVS info.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.3 2009/07/12 19:28:06 ith Exp $
+% $Id: abstract.tex,v 1.4 2009/07/14 14:05:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.3 2009/07/12 19:28:06 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.4 2009/07/14 14:05:11 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
+\label{ch:abstract}
+\addcontentsline{toc}{chapter}{Abstract}
 \section*{}
 INSERT ABSTRACT HERE
