--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,6 +1,8 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% $Id: mainintro.tex,v 1.3 2009/07/14 14:05:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.3 2009/07/14 14:05:11 ith Exp $}
+\chapter{Introduction}
+\label{ch:introduction}
