--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,10 +1,11 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % acknowledgements.tex - Ian Huston
-% $Id: acknowledgements.tex,v 1.3 2009/07/12 19:28:06 ith Exp $
+% $Id: acknowledgements.tex,v 1.4 2009/07/14 14:05:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.3 2009/07/12 19:28:06 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: acknowledgements.tex,v 1.4 2009/07/14 14:05:11 ith Exp $}
 % 
 % 
 \chapter*{Acknowledgements}
-%\addcontentsline{toc}{chapter}{Acknowledgements}
+\label{ch:acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
