--- a/theend.tex
+++ b/theend.tex
@@ -1,6 +1,8 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% $Id: theend.tex,v 1.3 2009/07/14 14:05:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: theend.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: theend.tex,v 1.3 2009/07/14 14:05:11 ith Exp $}
+\chapter{Conclusions}
+\label{ch:conclusions}
