--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.7 2009/07/14 13:49:16 ith Exp $
+% $Id: thesis.tex,v 1.8 2009/07/14 14:05:29 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -15,13 +15,17 @@ doublespacing
 % CVSoff is default
 \usepackage[CVSon]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.7 2009/07/14 13:49:16 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.8 2009/07/14 14:05:29 ith Exp $}
 
 \includeonly{
 % abstract,
+% acknowledgements,
+mainintro,
+dbi/dbi-intro,
 dbi/dbi,
 % dbi/multi,
 % numerical/numerical
+theend
 }
 \begin{document}
 
@@ -45,7 +49,7 @@ dbi/dbi,
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 %\setcounter{tocdepth}{0}
 \tableofcontents
-\listoffigures
+% \listoffigures
 %\listoftables
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -59,6 +63,8 @@ dbi/dbi,
 % Part I: DBI
 \part{DBI inflation}
 \label{part:dbi}
+% 
+\include{dbi/dbi-intro}
 % 
 \include{dbi/dbi}
 % 
