Change which files are included.

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.8 2009/07/14 14:05:29 ith Exp $
+% $Id: thesis.tex,v 1.9 2009/07/14 14:08:24 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -15,17 +15,17 @@ doublespacing
 % CVSoff is default
 \usepackage[CVSon]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.8 2009/07/14 14:05:29 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.9 2009/07/14 14:08:24 ith Exp $}
 
 \includeonly{
 % abstract,
 % acknowledgements,
-mainintro,
-dbi/dbi-intro,
+% mainintro,
+% dbi/dbi-intro,
 dbi/dbi,
 % dbi/multi,
 % numerical/numerical
-theend
+% theend
 }
 \begin{document}
 
