--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,11 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.9 2009/07/14 14:08:24 ith Exp $
+% $Id: thesis.tex,v 1.10 2009/07/14 16:58:24 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
+draft
 doublespacing
 %,openright
 ]
@@ -13,10 +14,10 @@ doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon]{ihformat}
+\usepackage[CVSon, labels]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.9 2009/07/14 14:08:24 ith Exp $}
-
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.10 2009/07/14 16:58:24 ith Exp $}
+% \usepackage[inline]{showlabels}
 \includeonly{
 % abstract,
 % acknowledgements,
