Added paper2 macros

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.3 2009/07/12 19:28:20 ith Exp $
+% $Id: ihmacros.sty,v 1.4 2009/07/14 16:58:44 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -63,7 +63,16 @@
 \newcommand{\powerspectrum}{\mathcal{P}}
 \newcommand{\Z}[2]{\vect{Z}_{{#1}{#2}}}
 % 
-
+% Maths from Paper 2
+\newcommand{\XR}{Z\dot{R}^2}
+\newcommand{\Vol}{\mathrm{Vol} (X_5)}
+\newcommand{\PX}{P_{,X}}
+\newcommand{\phisq}{\frac{1}{2}\dot{\phi}^2}
+\newcommand{\YAdS}{Y_{\mathrm{AdS}}}
+\newcommand{\delN}{\Delta \mathcal{N}_*}
+\newcommand{\Ps}{\mathcal{P}_S^2}
+\newcommand{\Pt}{\mathcal{P}_T^2}
+% 
 \newcommand{\tstart}{t_{\prim}}
 \newcommand{\tend}{t_{\com}}
 \newcommand{\prim}{\ast}
