--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.8 2009/07/14 17:10:09 ith Exp $
+%  $Id: ihformat.sty,v 1.9 2009/07/14 17:16:07 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -14,12 +14,12 @@
 % \DeclareOption{CVSoff}{%
 %  \let\@version\empty}
 \DeclareOption{CVSon}{%
-\def\version$Id: ihformat.sty,v 1.8 2009/07/14 17:10:09 ith Exp ${#1:v#2, #3} }%
+\def\version$#1,v #2 #3 #4${File #1:v#2\\ Last Saved #3} }%
 \DeclareOption{CVSoff}{%
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.8 2009/07/14 17:10:09 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.9 2009/07/14 17:16:07 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
