--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.4 2009/07/12 19:27:47 ith Exp $
+% $Id: dbi.tex,v 1.5 2009/07/14 17:19:12 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.4 2009/07/12 19:27:47 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.5 2009/07/14 17:19:12 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -118,7 +118,7 @@ We determine how the BM bound may be relaxed in generalized DBI models in
 Section \ref{sec:satisfy} and discuss multi-brane 
 IR scenarios in Section \ref{sec:multiple}. Finally, we conclude  
 in Section \ref{Conclusion}.   
-Units are chosen such that $\MP \equiv (8\pi G )^{-1/2}= 2 
+Units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}= 2 
 .4 \times 10^{18}\, {\rm GeV}$ 
 defines the reduced Planck mass and $c=\hbar =1$. 
 % 
@@ -179,7 +179,7 @@ $\phi \equiv \sqrt{T_3} \rho$, where $T_3 =m_s^4/[(2\pi )^3 g_s ]$
 is the brane tension. The action is then given by 
 \begin{eqnarray}
 \label{DBIaction}
-S=\int  d^4x \sqrt{|g|} \left[ \frac{\MP^2}{2} R 
+S=\int  d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
 + P (\phi , X) \right] \\
 \label{defP}
 P( \phi ,X) = - T (\phi)  \sqrt{1 - 2T^{-1} (\phi ) X}
@@ -199,10 +199,10 @@ In this case, the Friedmann equations for a monotonically
 varying inflaton can be expressed in the form \cite{brane6} 
 \begin{eqnarray}
 \label{Friedmann}
-3 \MP^2 H^2(\phi ) = V(\phi ) -T(\phi ) 
-\left[ 1- \sqrt{1+4\MP^4T^{-1} H'^2} \right] \\
+3 \Mpl^2 H^2(\phi ) = V(\phi ) -T(\phi ) 
+\left[ 1- \sqrt{1+4\Mpl^4T^{-1} H'^2} \right] \\
 \label{useful}
-\dot{\phi} = - \frac{2\MP^2H'}{\sqrt{1+4\MP^4 T^{-1} H'^2}} \, ,
+\dot{\phi} = - \frac{2\Mpl^2H'}{\sqrt{1+4\Mpl^4 T^{-1} H'^2}} \, ,
 \end{eqnarray}
 where $H=H(\phi )$ represents the Hubble parameter
 as a function of the field and a prime denotes $d/d\phi$. 
@@ -231,13 +231,13 @@ be quantified in terms of three parameters:
 \begin{eqnarray}
 \label{defepsilon}
 \epsilon \equiv -\frac{\dot{H}}{H^2}
-= \frac{XP_{,X}}{\MP^2H^2} 
-= \frac{2\MP^2}{\gamma} \left( \frac{H'}{H} \right)^2 \\
+= \frac{XP_{,X}}{\Mpl^2H^2} 
+= \frac{2\Mpl^2}{\gamma} \left( \frac{H'}{H} \right)^2 \\
 \label{defeta}
-\eta \equiv  \frac{2\MP^2}{\gamma}\frac{H''}{H} \\
+\eta \equiv  \frac{2\Mpl^2}{\gamma}\frac{H''}{H} \\
 \label{defs}
 s \equiv \frac{\dot{c_s}}{c_sH} 
-= \frac{2\MP^2}{\gamma} \frac{H'}{H}\frac{\gamma'}{\gamma}  \,,
+= \frac{2\Mpl^2}{\gamma} \frac{H'}{H}\frac{\gamma'}{\gamma}  \,,
 \end{eqnarray}
 where $\gamma \equiv 1/c_s$. 
 We will assume that the `slow-roll' conditions 
@@ -246,10 +246,10 @@ In this regime, the amplitudes and spectral indices of the two-point functions
 for the scalar and tensor perturbations are given by \cite{gm}
 \begin{eqnarray}
 \label{amplitudes}
-P_S^2= \frac{1}{8 \pi^2 \MP^2} \frac{H^2}{c_s \epsilon}
+P_S^2= \frac{1}{8 \pi^2 \Mpl^2} \frac{H^2}{c_s \epsilon}
 = \frac{H^4}{4\pi^2\dot{\phi}^2}
 \\
-P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\MP^2} 
+P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} 
 \\
 \label{indices}
 1-n_s = 4 \epsilon -2\eta  +2s 
@@ -301,7 +301,7 @@ may be combined to constrain the warped brane tension
 during observable inflation: 
 \begin{equation}
 \label{observewarp}
-\frac{T (\phi_*)}{\MP^4}  = 
+\frac{T (\phi_*)}{\Mpl^4}  = 
 \frac{\pi^2}{16} r^2P_S^2 \left( 1+\frac{1}{3f_{NL}} \right) \,,
 \end{equation}
 where a subscript `$*$' denotes that the quantity is to be evaluated 
@@ -336,7 +336,7 @@ Recently, Baumann and McAllister (BM) \cite{bmpaper}
 derived a field-theoretic upper bound on the tensor-scalar ratio 
 by noting that the four-dimensional Planck mass is related 
 to the volume of the compactified CY manifold, $V_6$, such that 
-$\MP^2=V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv 
+$\Mpl^2=V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv 
 \frac{1}{2} (2\pi )^7 g_s^2 m_s^{-8}$. In general, the compactified volume 
 is comprised of bulk and throat contributions, 
 $V_6 = V_{6,{\rm bulk}}+V_{6,{\rm throat}}$, where the latter is 
@@ -352,25 +352,25 @@ where $h (\rho_{UV})$ is of order unity).
 If one assumes that the bulk volume is 
 non-negligible relative to 
 that of the throat (i.e. $V_{6,\mathrm{throat}} < V_{6}$), 
-it follows that $\MP^2> V_{6,\mathrm{throat}}\kappa_{10}^{-2}$. 
+it follows that $\Mpl^2> V_{6,\mathrm{throat}}\kappa_{10}^{-2}$. 
 For a warped $AdS_5 \times X_5$ geometry, this leads to an 
 upper limit on the total variation of the inflaton field in 
 the throat region:
 \begin{equation}
 \label{BMbound}
-\frac{\phi_{UV}}{\MP}   < \frac{2}{\sqrt{N}} \,.
+\frac{\phi_{UV}}{\Mpl}   < \frac{2}{\sqrt{N}} \,.
 \end{equation}
 
 Condition (\ref{BMbound}) may be converted into a 
 corresponding limit on the tensor-scalar ratio by noting from 
 the definition (\ref{defepsilon})
-that $\dot{\phi}^2 /\MP^2 = 2\epsilon H^2/P_{,X}$.
+that $\dot{\phi}^2 /\Mpl^2 = 2\epsilon H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
 is given by the Lyth bound 
 \cite{lyth,bmpaper}
 \begin{equation}
 \label{rtheory}
-\frac{1}{\MP^2} \left( \frac{d\phi}{d {\cal{N}}} \right)^2 =
+\frac{1}{\Mpl^2} \left( \frac{d\phi}{d {\cal{N}}} \right)^2 =
 \frac{r}{8} \,,
 \end{equation}
 where ${\cal{N}} \equiv \int dt H$. 
@@ -419,7 +419,7 @@ the bulk volume is negligible. Hence,
 $| \Delta \phi_* |$ is bounded such that  
 \begin{equation}
 \label{halfwayconstraint}
-\left( \frac{\Delta \phi}{\MP} \right)^2_{*} < 
+\left( \frac{\Delta \phi}{\Mpl} \right)^2_{*} < 
 \frac{T_3 \kappa_{10}^2 (\Delta \rho_{*})^2}{|\Delta V_{6,*}|} \,.
 \end{equation} 
 
@@ -449,11 +449,11 @@ condition (\ref{trapeziumlimit}) into the bound (\ref{halfwayconstraint})
 yields the upper limit   
 \begin{equation}
 \label{boundpower6}
-\left( \frac{\Delta \phi}{\MP} \right)^6_{*} 
+\left( \frac{\Delta \phi}{\Mpl} \right)^6_{*} 
 < \frac{\pi^3}{16\mathrm{Vol}(X_5)} r^2 P_S^2 
 \left( 1+ \frac{1}{3f_{NL}} \right)  \,.
 \end{equation}
-Hence, employing the Lyth bound in the form $(\Delta \phi_* / \MP )^2 \simeq 
+Hence, employing the Lyth bound in the form $(\Delta \phi_* / \Mpl )^2 \simeq 
 r (\Delta {\cal{N}}_*)^2 /8$  
 results in a very general upper limit on the tensor-scalar ratio: 
 \begin{equation}
@@ -560,7 +560,7 @@ and (\ref{indices}), we find that
 \begin{equation}
 \label{constraint}
 1-n_s = 4 \epsilon +\frac{2s}{1-\gamma^2} \mp 
-\frac{2\MP^2}{\gamma} \frac{T'|H'|}{TH}  \,,
+\frac{2\Mpl^2}{\gamma} \frac{T'|H'|}{TH}  \,,
 \end{equation}
 where the minus (plus) sign corresponds to 
 a brane moving down (up) the warped throat. 
@@ -574,7 +574,7 @@ into Eq. (\ref{constraint}) then yields
 \begin{equation}
 \label{obscon1}
 1-n_s = \frac{r}{4} \sqrt{1+3f_{NL}} + \frac{n_{NL}}{1+3f_{NL}}
-\mp \sqrt{\frac{r}{8}} \left( \frac{T'}{T} \MP \right)_*  \,.
+\mp \sqrt{\frac{r}{8}} \left( \frac{T'}{T} \Mpl \right)_*  \,.
 \end{equation}
 
 In \cite{lidser2}, brane inflation near the tip of a KS-type 
@@ -682,7 +682,7 @@ follows as a consequence of assuming
 the constraint (\ref{importantbound}). This  
 could be violated in IR versions of the scenario, where
 observable scales crossed the Hubble radius when the 
-brane was near the tip of the throat and $\phi \ll \MP$
+brane was near the tip of the throat and $\phi \ll \Mpl$
 \cite{brane12,brane14}. 
 Nonetheless, we emphasize that the upper bound (\ref{upperbound})
 on the tensor modes 
@@ -753,7 +753,7 @@ that the CMB normalization condition (\ref{observewarp})
 generalizes to a constraint on the value of $f_1 (\phi_*)$:  
 \begin{equation}
 \label{observef1}
-\left( \frac{f_1}{\MP^4} \right)_{*} \simeq \frac{\pi^2}{16} r^2P_S^2
+\left( \frac{f_1}{\Mpl^4} \right)_{*} \simeq \frac{\pi^2}{16} r^2P_S^2
 \left( 1+ \frac{1}{3f_{NL}} \right)  \,.
 \end{equation}
 Finally, the expression for the scalar spectral index
@@ -764,18 +764,18 @@ is straightforward to show that
 \label{constraintW}
 1-n_s = \frac{r}{4} \sqrt{1+3f_{NL}}
  +\frac{n_{NL}}{1+3f_{NL} } \mp \sqrt{\frac{r}{4f_1f_2}} \left( 
-\frac{f_1'}{f_1} \MP \right)_*  \,.
+\frac{f_1'}{f_1} \Mpl \right)_*  \,.
 \end{equation}
 
 Eq. (\ref{defvarphi}) also allows us to deduce 
 that the infinitesimal variation of the effective 
 field $\varphi$ is given by the Lyth bound, 
-$(\Delta \varphi /\MP )^2 \simeq 
+$(\Delta \varphi /\Mpl )^2 \simeq 
 r (\Delta {\cal{N}})^2/8$. This implies that 
 the variation of the inflaton field during inflation is 
 \begin{equation}
 \label{newbit}
-\int_0^{\phi_{*}} \frac{d\phi}{\MP} \, \sqrt{\frac{f_1f_2}{2}} 
+\int_0^{\phi_{*}} \frac{d\phi}{\Mpl} \, \sqrt{\frac{f_1f_2}{2}} 
 = \sqrt{\frac{r_*}{8}}  {\cal{N}}_{\mathrm{eff}} \,.
 \end{equation}
 If we now restrict our attention to 
@@ -783,7 +783,7 @@ the observable stage of inflation, and further assume that the variation
 of $f_1f_2$ is negligible during that epoch, we find that 
 \begin{equation}
 \label{generalphivary1}
-\left( \frac{\Delta \phi}{\MP} \right)^2_{*} \simeq 
+\left( \frac{\Delta \phi}{\Mpl} \right)^2_{*} \simeq 
 \frac{(\Delta {\cal{N}}_{*} )^2}{4 f_1f_2} r_*  \,.
 \end{equation}
 On the other hand, the BM bound restricts the maximal 
@@ -817,7 +817,7 @@ results in a necessary condition on the value of $f_2(\phi_*)$
 for the generalized BM bound to be satisfied: 
 \begin{equation}
 \label{f2bound}
-\frac{f_2 (\phi_*)\MP^4}{N} > \frac{(\Delta {\cal{N}}_*)^2}{\pi^2} 
+\frac{f_2 (\phi_*)\Mpl^4}{N} > \frac{(\Delta {\cal{N}}_*)^2}{\pi^2} 
 \frac{1}{rP_S^2} \,.
 \end{equation}
 This condition can also be interpreted as a lower limit on $r$ 
@@ -848,7 +848,7 @@ therefore leads to a constraint on $f_2 (\phi_*) $
 for the generalized BM bound to be satisfied in IR inflation: 
 \begin{equation}
 \label{f2IRlolwer}
-\frac{f_2\MP^4}{N} > \frac{\sqrt{3} (\Delta {\cal{N}}_*)^2}{4\pi^2}
+\frac{f_2\Mpl^4}{N} > \frac{\sqrt{3} (\Delta {\cal{N}}_*)^2}{4\pi^2}
 \frac{\sqrt{f_{NL}}}{(1-n_s)P_S^2}  \,.
 \end{equation}
 
@@ -916,7 +916,7 @@ The generalized BM bound (\ref{f2bound}) may now be expressed as
 a limit on the value of the warp factor $h(\phi_*)$ on CMB scales: 
 \begin{equation}
 \label{warptorelax}
-\frac{NT_3h^4_*}{\MP^4} < 
+\frac{NT_3h^4_*}{\Mpl^4} < 
 \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{3f_{NL}}(\Delta {\cal{N}}_*)^2} \,.
 \end{equation}
 
@@ -928,7 +928,7 @@ Condition (\ref{warptorelax}) therefore reduces to a constraint on the
 value of the inflation during observable inflation: 
 \begin{equation}
 \label{phivalue}
-\frac{\phi_*^4}{\MP^4} < 
+\frac{\phi_*^4}{\Mpl^4} < 
 \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{3f_{NL}} ( \Delta {\cal{N}}_*)^2} 
 \frac{\lambda}{N} \,,
 \end{equation} 
@@ -942,9 +942,9 @@ ${\rm D3}$-brane charge:
 \begin{equation}
 \label{Nlimit}
 N< \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{3f_{NL}} ( \Delta {\cal{N}}_*)^2}
-\left( \frac{\MP}{h_{\rm cut}m_s} \right)^4  \,.
+\left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,.
 \end{equation}
-Assuming the typical values $m_s \sim 10^{-2}\MP$, 
+Assuming the typical values $m_s \sim 10^{-2}\Mpl$, 
 $\Delta {\cal{N}}_* \simeq 4$ and 
 $h_{\rm cut} \sim 10^{-2}$ implies  
 $N < 7 \times 10^7 (1-n_s)f_{NL}^{-1/2} < 2\times 10^6$, where 
@@ -963,7 +963,7 @@ Hence, combining inequalities
 \hat{C} \ll 
 \frac{32 \pi^4 (1-n_s)P_S^2}{\sqrt{3f_{NL}} ( \Delta {\cal{N}}_*)^2}
 \frac{g_s}{\mathrm{Vol} (X_5) }
-\left( \frac{\MP}{h_{\rm cut}m_s} \right)^4  \,,
+\left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,,
 \end{equation}
 and specifying $g_s \sim 10^{-2}$ and 
 $\mathrm{Vol}(X_5) \simeq \pi^3$ then yields the limit  
@@ -990,7 +990,7 @@ with the NS-NS and R-R three-forms, respectively, such that $N=MK$.
 In this case, the generalized BM bound (\ref{warptorelax}) becomes 
 \begin{equation}
 \label{loglimit}
-\frac{8\pi K}{3Mg_s} -\ln N > 4 \ln \left( \frac{m_s}{g_s^{1/4}\MP} \right)
+\frac{8\pi K}{3Mg_s} -\ln N > 4 \ln \left( \frac{m_s}{g_s^{1/4}\Mpl} \right)
 -\ln \left( 
 \frac{64\pi^5 (1-n_s)P_S^2}{\sqrt{3f_{NL}} ( \Delta {\cal{N}}_*)^2}
 \right) \,.
@@ -1007,7 +1007,7 @@ generalized BM bound to be satisfied:
 \label{Nlowerlimit}
 \frac{1}{N} \exp \left( \frac{8\pi g_s N}{3}  \right)
 > \frac{\sqrt{3f_{NL}} ( \Delta {\cal{N}}_*)^2}{64\pi^5 
-(1-n_s)P_S^2} \frac{1}{g_s} \left( \frac{m_s}{\MP} \right)^4 \,.
+(1-n_s)P_S^2} \frac{1}{g_s} \left( \frac{m_s}{\Mpl} \right)^4 \,.
 \end{equation}
 
 Recalling that a necessary condition for the backreaction 
@@ -1139,7 +1139,7 @@ kinetic function (\ref{genaction}) and we find that
 \begin{equation}
 \label{generalgeneral}
 r_* < \frac{2}{\pi^{2/3} ( \Delta \mathcal{N}_*)^2}
-\left( \frac{m_s}{\MP} \right)^{4/3} 
+\left( \frac{m_s}{\Mpl} \right)^{4/3} 
 \frac{h_*^{4/3} (f_1f_2)_*}{g_s\mathrm{Vol}(X_5)}  \,.
 \end{equation}
 For a specific model where the warp factor and 
