--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,14 +1,27 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.6 2009/07/14 17:18:15 ith Exp $
+% $Id: multibrane.tex,v 1.7 2009/07/14 17:23:04 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.6 2009/07/14 17:18:15 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.7 2009/07/14 17:23:04 ith Exp $}
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \chapter{Multi brane inflation}
 \label{ch:multibrane}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Introduction}
+\label{sec:multi-intro}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 The quest to realise inflation within string/M-theory continues to 
 attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
@@ -121,7 +134,15 @@ Units are chosen such that $\hbar = c =1$ and $\Mpl \equiv (8\pi G)^{-1/2}
 = 2.4 \times 10^{-18} \, {\rm GeV}$ denotes the 
 reduced Planck mass. 
 
-\section{Non-Canonical Inflation} \label{sec:noncanoninfl}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Non-Canonical Inflation} 
+\label{sec:noncanoninfl}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
 
 The low-energy, world-volume dynamics of a 
 ${\rm D3}$-brane in a warped background is determined 
@@ -247,8 +268,16 @@ field is given approximately by \cite{lyth,bmpaper}
 \frac{(\Delta {\cal{N}}_*)^2}{8} \left( \frac{r}{c_sP_{,X}} \right)_* \,.
 \end{equation}
 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
 \label{sec:theobound}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 The ten-dimensional metric of the warped deformed conifold inside a  
 throat region has the form 
@@ -363,9 +392,17 @@ h_*^{4/3} N < 300 \frac{(\Delta {\cal{N}})^2_*}{{\cal{N}}_{\rm eff}^2} \,.
 
 In the following Section, we identify a class of models in which  
 these bounds could be relaxed. 
-
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Relaxing the Upper Bounds on the Tensor-Scalar Ratio}
 \label{sec:relaxingbound}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% 
 
 In the standard DBI scenario, the kinetic function defined in 
 Eq. (\ref{DBIaction})  takes the form 
@@ -521,7 +558,18 @@ matrix degrees of freedom become important and this
 results in a kinetic function satisfying $m \le 1/2$.
 We will discuss this in more detail in the following Section.
 
-\section{Action for Multiple Coincident Branes} \label{sec:multibranes}
+% 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Action for Multiple Coincident Branes} 
+\label{sec:multibranes}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
 
 We have seen how the form of the kinetic function
 $P$ can significantly change the
@@ -703,8 +751,17 @@ backreactive corrections
 to the wrapped brane models. It would certainly be more useful to develop both these models in more
 detail.
 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Bounds on the Tensor-Scalar Ratio for Multi-Brane 
-Inflation} \label{sec:multibounds}
+Inflation} 
+\label{sec:multibounds}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 The last terms appearing in the summations of Eqs. (\ref{oddbrane}) 
 and (\ref{evenbrane}) correspond  to the $k=(n-1)/2$ 
@@ -973,9 +1030,18 @@ rule out these models as viable candidates for inflation. Rather, it
 suggests that it will be difficult to construct a working model 
 that results in a detectable tensor signal.   
 
-
-
+% 
+% 
+% 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Discussion}
+\label{sec:multi-disc}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
 
 The relativistic DBI brane scenario represents an attractive, 
 string-inspired realisation of the inflationary scenario. Recent
@@ -1047,12 +1113,25 @@ with current cosmological observations. It would also be interesting to
 investigate whether the effective action (\ref{gensol}) with values of 
 $m \ne - 1/2$ arises in other string-inspired settings. 
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section*{Acknowledgements}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 We would like to thank Adam Ritz for useful comments on the manuscript.
 IH is supported jointly by a Queen Mary studentship and the Science and
 Technology Facilities Council (STFC).
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section*{Appendix: Exact Solution}
+\label{sec:multi-appendix}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 Eq. (\ref{defalpha}) can be analytically solved in full 
 generality without imposing the limits (\ref{Plimits}) on the 
