--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.11 2009/07/14 17:16:43 ith Exp $
+% $Id: thesis.tex,v 1.12 2009/07/14 17:26:10 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -16,14 +16,14 @@ doublespacing
 % CVSoff is default
 \usepackage[CVSon, labels]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.11 2009/07/14 17:16:43 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.12 2009/07/14 17:26:10 ith Exp $}
 % \usepackage[inline]{showlabels}
 \includeonly{
 % abstract,
 % acknowledgements,
 % mainintro,
 % dbi/dbi-intro,
-% dbi/dbi,
+dbi/dbi,
 dbi/multibrane
 % numerical/numerical
 % theend
