--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.12 2009/07/14 17:26:10 ith Exp $
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+% $Id: thesis.tex,v 1.13 2009/07/14 17:27:35 ith Exp $
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
@@ -10,14 +10,20 @@ doublespacing
 %,openright
 ]
 {icldt}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
 \usepackage[CVSon, labels]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.12 2009/07/14 17:26:10 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.13 2009/07/14 17:27:35 ith Exp $}
 % \usepackage[inline]{showlabels}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% Include list
 \includeonly{
 % abstract,
 % acknowledgements,
@@ -28,6 +34,7 @@ dbi/multibrane
 % numerical/numerical
 % theend
 }
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
 
 % Title page
