--- a/title.tex
+++ b/title.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.2 2009/07/12 17:47:59 ith Exp $
+% $Id: title.tex,v 1.3 2009/07/17 11:12:40 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.2 2009/07/12 17:47:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.3 2009/07/17 11:12:40 ith Exp $}
 % 
 \college{Queen Mary}
 % 
@@ -20,5 +20,8 @@
 % 
 \author{Ian Huston}
 % 
+% 
+\hypersetup{pdftitle={Distinguishing inflationary models using higher order statistics},
+            pdfauthor={Ian Huston}}
 % 
 \maketitle
