--- a/icldt.cls
+++ b/icldt.cls
@@ -98,8 +98,13 @@
 \newcommand*{\declaration}[1]{\gdef\@declaration{#1}}
 \LoadClass{scrreprt}
 \RequirePackage{setspace}
-\RequirePackage[left=3.8cm,right=2.0cm,top=2.97cm,bottom=3.97cm]%
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% MARGINS
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\RequirePackage[left=4.0cm,right=2.0cm,top=2.97cm,bottom=3.97cm]%
  {geometry}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \setkomafont{sectioning}{\rmfamily\bfseries}
 \renewcommand*{\maketitle}{
 \begin{titlepage}
