Changed bib file name and include list.

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.13 2009/07/14 17:27:35 ith Exp $
+% $Id: thesis.tex,v 1.14 2009/07/17 11:13:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -16,9 +16,9 @@ doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon, labels]{ihformat}
+\usepackage[CVSon]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.13 2009/07/14 17:27:35 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.14 2009/07/17 11:13:26 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -30,8 +30,8 @@ doublespacing
 % mainintro,
 % dbi/dbi-intro,
 dbi/dbi,
-dbi/multibrane
-% numerical/numerical
+% dbi/multibrane,
+% numerical/numerical,
 % theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -97,8 +97,8 @@ dbi/multibrane
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
-% \bibliography{references}
-% \bibliographystyle{dmmm}
+% \bibliography{../central-store}
+% \bibliographystyle{thesis}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
