--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.4 2009/07/17 15:56:15 ith Exp $
+% $Id: numerical.tex,v 1.5 2009/07/17 16:13:24 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.4 2009/07/17 15:56:15 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.5 2009/07/17 16:13:24 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -256,7 +256,7 @@ and the second order
 +4\phi_1\left(a^2 \Upp \dvp1-\nabla^2\dvp1\right)
 +4\vp_{0}'\phi_1\phi_1'\nonumber\\
 %
-&-&2\dvp1'\left(\nabla^2 B_1+\phi_1'\right)-4\dvp1'_{,k}B_{1,}^{~k}
+&-&2\dvp1'\left(\nabla^2 B_1+\phi_1'\right)-4{\dvp1'}_{,k}B_{1,}^{~k}
 =0\,,
 \end{eqnarray}
 where as mentioned before all the variables are now in the flat gauge.
