--- a/thesis.tex
+++ b/thesis.tex
@@ -1,11 +1,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.14 2009/07/17 11:13:26 ith Exp $
+% $Id: thesis.tex,v 1.15 2009/07/17 16:13:42 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
 12pt,
-draft
+draft,
+listof=totoc,
+bibliography=totoc,
 doublespacing
 %,openright
 ]
@@ -18,21 +20,21 @@ doublespacing
 % CVSoff is default
 \usepackage[CVSon]{ihformat}
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.14 2009/07/17 11:13:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.15 2009/07/17 16:13:42 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Include list
 \includeonly{
-% abstract,
-% acknowledgements,
-% mainintro,
-% dbi/dbi-intro,
+abstract,
+acknowledgements,
+mainintro,
+dbi/dbi-intro,
 dbi/dbi,
-% dbi/multibrane,
-% numerical/numerical,
-% theend
+dbi/multibrane,
+numerical/numerical,
+theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
@@ -94,11 +96,11 @@ dbi/dbi,
 
 
 % \end{doublespace}
-
+\begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
-% \bibliography{../central-store}
-% \bibliographystyle{thesis}
+\bibliography{../central-store}
+\bibliographystyle{thesis}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -106,5 +108,5 @@ dbi/dbi,
 %\chapter*{Index??}
 %\addcontentsline{toc}{chapter}{Index??}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
-
+\end{singlespace}
 \end{document}
